--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "swiper": "^11.2.1",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
